--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a href='weather/index.html' target='_'>Weather Report (js, api)</a> 
        </li>
        <li>
+            <a href='jswong/index.html' target='_'>J's Wong Menu (single page, responsive, w dropdown: html/css/js)</a> 
+       </li>
+       <li>
         <a href='instagram/index.html' target='_'>Responsive Instagram Mockup (html, css)</a> 
         </li>
         <li>
