--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <h1>Andrew Rusli Web Dev Projects</h1>
     <ul style='font-size: 1.5rem;'>
        <li>
-            <a href='snake/index.html' target='_'>Snake (js) </a>
+            <a href='snake/index.html' target='_blank'>Snake (js) </a>
        </li> 
        <li>
-            <a href='weather/index.html' target='_'>Weather Report (js, api)</a> 
+            <a href='weather/index.html' target='_blank'>Weather Report (js, api)</a> 
        </li>
        <li>
-            <a href='jswong/index.html' target='_'>J's Wong Menu (single page, responsive, w dropdown: html/css/js)</a> 
+            <a href='jswong/index.html' target='_blank'>J's Wong Menu (single page, responsive, w dropdown: html/css/js)</a> 
        </li>
        <li>
-        <a href='instagram/index.html' target='_'>Responsive Instagram Mockup (html, css)</a> 
+        <a href='instagram/index.html' target='_blank'>Responsive Instagram Mockup (html, css)</a> 
         </li>
         <li>
-            <a href='listmaker/index.html' target='_'>List Maker (js)</a> 
+            <a href='listmaker/index.html' target='_blank'>List Maker (js)</a> 
         </li>
     </ul>
    
