--- a/weather/index.html
+++ b/weather/index.html
@@ -16,7 +16,9 @@
         <input type='submit' value='Go' class='button' onclick=makeRequest()>
     
         </br>
-        <h2 class='report'></h2>
+         <div class='weatherman'>
+            <h2 class='report'></h2>    
+        </div>
     </div>
 
  
