--- a/weather/index.html
+++ b/weather/index.html
@@ -16,12 +16,17 @@
         <input type='submit' value='Go' class='button' onclick=makeRequest()>
     
         </br>
-         <div class='weatherman'>
+        <div class='weatherman'>
             <h2 class='report'></h2>    
         </div>
+        
     </div>
 
- 
+    <script src="uscitylist.json"></script>
+    <!-- imports the city list as a js var. 
+        questions: 
+        can i do this with the json file? answer: yes.
+        how are hte quotation marks around properties interpreted? -->
     <script src="script.js"></script>
     <script src="states.js"></script>
 </body>
