--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <body>
     <h1>Andrew Rusli Web Dev Projects</h1>
     <ul style='font-size: 1.5rem;'>
+        <li>
+            <a href='hangman/index.html' target='_blank'>Hangman (js) </a>
+       </li> 
        <li>
             <a href='snake/index.html' target='_blank'>Snake (js) </a>
        </li> 
