--- a/hangman/index.html
+++ b/hangman/index.html
@@ -71,7 +71,8 @@
                 <div class='letter'>Z</div>
             </div>
     </div>
-    
+
+<script src='wordlist.js'></script>
 <script src='app.js'></script>
 </body>
 </html>
