--- a/hangman/index.html
+++ b/hangman/index.html
@@ -72,6 +72,10 @@
             </div>
     </div>
 
+    <div id='reset'>
+        <button id='message' class='hide' onclick='reset()'></button>
+    </div>
+
 <script src='wordlist.js'></script>
 <script src='app.js'></script>
 </body>
