--- a/hangman/alternate/indexv1.html
+++ b/hangman/alternate/indexv1.html
@@ -33,6 +33,7 @@
                 <img src='images/rightarm.png' id='rightarm' class='hide'>
                 <img src='images/leftleg.png' id='leftleg' class='hide'>
                 <img src='images/rightleg.png' id='rightleg' class='hide'>           
+
             </div>
         </div>
        
@@ -72,7 +73,7 @@
     </div>
 
     <div id='reset'>
-        <div id='message' class='hide'></div>
+        <button id='message' class='hide' onclick='reset()'></button>
     </div>
 
 <script src='wordlist.js'></script>
