--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <h1>Andrew Rusli Web Dev Projects</h1>
     <ul style='font-size: 1.5rem;'>
         <li>
+            <a href='7minuteworkout/index.html' target='_blank'>7 minute workout (js) </a>
+       </li> 
+        <li>
             <a href='hangman/index.html' target='_blank'>Hangman (js) </a>
        </li> 
        <li>
